# smarlert

./: .gitignore  README.md  config.example.json  pyproject.toml
src/smarlert/: __init__.py  config.py  extractor.py  fetcher.py  main.py
