[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarlert"
version = "0.1.0"
description = "Collect website data and push changes to a Signal chat"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "requests>=2.32.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
